--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                </div>
                <div class="col col-12">
                   <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/1.png); background-position: center">
+                     <div class="block" style="background-image:url(assets/1.png); background-position: center; background-size: 100%; opacity:0.7;">
                         <div class="block-body height-2">
                            <h2 align="center">
                               <a class="post-link blocks"  href="quads.html">Publications</a>
@@ -101,7 +101,7 @@
                      </div>
                   </div>
                   <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/10.jpeg); background-position: center">
+                     <div class="block" style="background-image:url(assets/10.jpeg); background-position: center; background-size: 50%; opacity:1;">
                         <div class="block-body height-2">
                            <h2 align="center">
                               <a class="post-link blocks"  href="quads.html">Teaching</a>
