--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png); background-position: center; background-size: 100%; opacity:0.7;">
                         <div class="block-body height-2">
-                           <h2 align="center" style="color: black">
-                              <a class="post-link blocks"  href="quads.html">Publications</a>
+                           <h2 align="center">
+                              <a class="custom"  href="quads.html">Publications</a>
                            </h2>
                         </div>
                      </div>
@@ -104,7 +104,7 @@
                      <div class="block" style="background-image:url(assets/10.jpeg); background-position: center; background-size: 150%; opacity:0.7;">
                         <div class="block-body height-2">
                            <h2 align="center">
-                              <a class="post-link blocks"  href="quads.html">Teaching</a>
+                              <a class="custom"  href="quads.html">Teaching</a>
                            </h2>
                         </div>
                      </div>
