--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                      </div>
                   </div>
                   <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/1.jpg); background-position: center; background-size: 120%; opacity:0.7;">
+                     <div class="block" style="background-image:url(assets/11.jpg); background-position: center; background-size: 120%; opacity:0.7;">
                         <div class="block-body height-2">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Teaching</a>
@@ -113,7 +113,7 @@
                      <div class="block Cpurple">
                         <div class="block-body height-2">
                            <h2 align="center">
-                              <a class="post-link blocks"  href="quads.html">Education</a>
+                              <a class="post-link blocks"  href="education.html">Education</a>
                            </h2>
                         </div>
                      </div>
