--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                </div>
                <div class="col col-12">
                   <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/1.png); background-position: center; background-size: 100%; opacity:0.7;">
+                     <div class="block" style="background-image:url(assets/1.png); background-position: center; background-size: 100%; opacity:1;">
                         <div class="block-body height-2">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Publications</a>
@@ -95,13 +95,13 @@
                      <div class="block Cgreen">
                         <div class="block-body height-2">
                            <h2 align="center">
-                              <a class="post-link blocks"  href="quads.html">Work experience</a>
+                              <a class="post-link blocks"  href="career.html">Work experience</a>
                            </h2>
                         </div>
                      </div>
                   </div>
                   <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/12.jpg); background-position: center; background-size: 120%; opacity:0.7;">
+                     <div class="block" style="background-image:url(assets/12.jpg); background-position: center; background-size: 120%; opacity:1;">
                         <div class="block-body height-2">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Teaching</a>
