--- a/teaching.html
+++ b/teaching.html
@@ -33,103 +33,50 @@
       </h1>
       <br><br>
       <div class="container">
-         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
-               
-			   
-
-
-
-
-
-
-
-
- <h3 class="big"> Western Institute of Technology and Higher Education (ITESO)</h3><hr><br>
-			
-
-<h4><b>Computer architecture (Undergraduate level). Principal instructor</b>: This course covers an overview of basic concepts of computer organization and architecture, ranging from some history, the power wall, some instruction set architectures, critical routes, pipeline, cache memory among other topics. The students use Verilog to develop a copy of the classical pipelined MIPS processor and run a Hanoi tower program on it using MIPS assembly. </h4>
-<ul>
-<li> Summer 2019</li>
-<li> Spring 2019</li>
-<li> Spring 2018</li>
-<li> Autumn 2017</li>
-<li> Autumn 2016</li>
-</ul><br>
-
-<h4><b>Embedded systems II (Undergraduate level). Principal instructor</b>: This course covers advanced embedded systems topics such as real time scheduling, basic kernel development, and advanced peripherals such as USB and Ethernet + TCP/IP. The students mostly worked with the FRDMK64F board.</h4>
-			
-<ul>
-<li> Autumn 2018</li>
-<li> Spring 2018</li>
-<li> Spring 2017</li>
-</ul><br>
-
- <h3 class="big"> Monterrey Institute of Technology and Higher Education (ITESM)</h3><hr><br>
-
-<h4><b>Topics on advanced control with application to the control of Aerial Robots (Undergraduate level). Assistant/technical instructor (~20% of the course)</b>: This course covers basic nonlinear control theory, mostly applied to quadrotors. The students use a crazyflie platform to test their own control designs.			</h4>
-
-<ul>
-<li> Autumn 2018</li>
-<li> Autumn 2016</li>
-</ul><br>
-
-<h4><b> Embedded Software with application to the control of Aerial Robots (Graduate level). Assistant/technical instructor (~20% of the course):</b> This course covers basic nonlinear control theory, mostly applied to quadrotors. The students use a crazyflie platform to test their own control designs.					</h4>
-			
-<ul>
-<li> Spring 2017</li>
-</ul><br>
-
-<h4><b> Embedded Systems (Graduate level). Assistant instructor (~10% of the course):</b> This part of the course covers real time kernel programming in a FRDMF64F board.</h4>			
-<ul>
-<li> Autumn 2017</li>
-</ul><br>
-
-
-
+      <div class="row">
+         <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
+            <h3 class="big"> Western Institute of Technology and Higher Education (ITESO)</h3>
+            <hr>
+            <br>
+            <h4><b>Computer architecture (Undergraduate level). Principal instructor</b>: This course covers an overview of basic concepts of computer organization and architecture, ranging from some history, the power wall, some instruction set architectures, critical routes, pipeline, cache memory among other topics. The students use Verilog to develop a copy of the classical pipelined MIPS processor and run a Hanoi tower program on it using MIPS assembly. </h4>
+            <ul>
+               <li> Summer 2019</li>
+               <li> Spring 2019</li>
+               <li> Spring 2018</li>
+               <li> Autumn 2017</li>
+               <li> Autumn 2016</li>
+            </ul>
+            <br>
+            <h4><b>Embedded systems II (Undergraduate level). Principal instructor</b>: This course covers advanced embedded systems topics such as real time scheduling, basic kernel development, and advanced peripherals such as USB and Ethernet + TCP/IP. The students mostly worked with the FRDMK64F board.</h4>
+            <ul>
+               <li> Autumn 2018</li>
+               <li> Spring 2018</li>
+               <li> Spring 2017</li>
+            </ul>
+            <br>
+            <h3 class="big"> Monterrey Institute of Technology and Higher Education (ITESM)</h3>
+            <hr>
+            <br>
+            <h4><b>Topics on advanced control with application to the control of Aerial Robots (Undergraduate level). Assistant/technical instructor (~20% of the course)</b>: This course covers basic nonlinear control theory, mostly applied to quadrotors. The students use a crazyflie platform to test their own control designs.			</h4>
+            <ul>
+               <li> Autumn 2018</li>
+               <li> Autumn 2016</li>
+            </ul>
+            <br>
+            <h4><b> Embedded Software with application to the control of Aerial Robots (Graduate level). Assistant/technical instructor (~20% of the course):</b> This course covers basic nonlinear control theory, mostly applied to quadrotors. The students use a crazyflie platform to test their own control designs.					</h4>
+            <ul>
+               <li> Spring 2017</li>
+            </ul>
+            <br>
+            <h4><b> Embedded Systems (Graduate level). Assistant instructor (~10% of the course):</b> This part of the course covers real time kernel programming in a FRDMF64F board.</h4>
+            <ul>
+               <li> Autumn 2017</li>
+            </ul>
+            <br>
          </div>
       </div>
       <br><br>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	  <div id="footerwrap">
+      <div id="footerwrap">
          <div class="container">
             <div class="row">
                <div class="col-lg-4">
