--- a/index.html
+++ b/index.html
@@ -38,7 +38,17 @@
                </button>
                <a class="navbar-brand" href="/">Rodrigo Aldana-López</a>
             </div>
-            <!--/.nav-collapse -->
+    <div class="navbar-collapse collapse navbar-right">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/">Home</a></li>
+        <li ><a href="carrer.html">Work Experience</a></li>
+        <li ><a href="publications.html">Publications</a></li>
+        <li ><a href="education.html">Education</a></li>
+        <li ><a href="patents.html">Patents</a></li>
+        <li ><a href="patents.html">Teaching</a></li>
+      </ul>
+    </div>
+<!--/.nav-collapse -->
          </div>
       </div>
       <div class="page-content margin-bot-big">
