--- a/publications.html
+++ b/publications.html
@@ -25,6 +25,17 @@
                </button>
                <a class="navbar-brand" href="/">Rodrigo Aldana-López</a>
             </div>
+    <div class="navbar-collapse collapse navbar-right">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/">Home</a></li>
+        <li ><a href="carrer.html">Work Experience</a></li>
+        <li ><a href="publications.html">Publications</a></li>
+        <li ><a href="education.html">Education</a></li>
+        <li ><a href="patents.html">Patents</a></li>
+        <li ><a href="patents.html">Teaching</a></li>
+      </ul>
+    </div>
+<!--/.nav-collapse -->
          </div>
       </div>
       <div id="blue">
