--- a/education.html
+++ b/education.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
    <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title> Rodrigo Aldana-López - Patents </title>
-      <!-- stylesheets -->
-      <link rel="stylesheet" href="/css/site.css">
-      <link media="all" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-      <link media="all" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-      <link href="/assets/css/style.css" rel="stylesheet">
+      <meta charset="utf-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <!-- Bootstrap Core CSS -->
+      <link href="/css/bootstrap.min.css" rel="stylesheet">
       <link rel="stylesheet" href="/css/main.css">
+      <link rel="stylesheet" href="/files/css/font-awesome/css/font-awesome.min.css">
+      <link href="/assets/css/style.css" rel="stylesheet">
+      <title>Rodrigo Aldana-López - Education </title>
+      <!-- Custom CSS -->
+      <link href="/css/timeline.css" rel="stylesheet">
    </head>
    <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
       <!-- Fixed navbar -->
@@ -29,7 +30,7 @@
                <ul class="nav navbar-nav">
                   <li class="active"><a href="/">Home</a></li>
                   <li ><a href="career.html">Work Experience</a></li>
-                  <li ><a href="publicationsDate.html">Publications</a></li>
+                  <li ><a href="publications.html">Publications</a></li>
                   <li ><a href="education.html">Education</a></li>
                   <li ><a href="patents.html">Patents</a></li>
                   <li ><a href="teaching.html">Teaching</a></li>
@@ -38,22 +39,13 @@
             <!--/.nav-collapse -->
          </div>
       </div>
-      <div id="blue">
-         <div class="container">
-            <div class="row">
-               <h3>Patents</h3>
-            </div>
-            <!-- /row -->
-         </div>
-         <!-- /container -->
-      </div>
-      <!-- /blue -->
-      <br><br>
-      <div class="container">
+      <br><br><br><br><br>
       <!-- Career Section -->
       <section id="Career" class="container content-section text-center">
          <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
+               <h1 id="career">Education</h1>
+               <br><br>
                <ul class="timeline">
                   <li class="timeline
                      ">
@@ -115,16 +107,6 @@
             </div>
          </div>
       </section>
-      </div>
-      </div>
-      </div>
-
-      <div class="container">
-      
-      </div>
-      </div>
-      </div>
-      <br><br>
       <div id="footerwrap">
          <div class="container">
             <div class="row">
@@ -149,10 +131,6 @@
          <! --/container -->
       </div>
       <! --/footerwrap -->
-      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-      <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-      <!--<script src="/assets/js/prism.js"></script> -->
-      <script src="/js/site.js"></script>
       <!-- jQuery -->
       <script src="/js/jquery.js"></script>
       <!-- Bootstrap Core JavaScript -->
@@ -161,13 +139,5 @@
       <script src="/js/jquery.easing.min.js"></script>
       <!-- Custom Theme JavaScript -->
       <script src="/js/grayscale.js"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-      <script src="/assets/js/bootstrap.min.js"></script>
-      <script src="/assets/js/retina-1.1.0.js"></script>
-      <script src="/assets/js/jquery.hoverdir.js"></script>
-      <script src="/assets/js/jquery.hoverex.min.js"></script>
-      <script src="/assets/js/jquery.prettyPhoto.js"></script>
-      <script src="/assets/js/jquery.isotope.min.js"></script>
-      <script src="/assets/js/custom.js"></script>
    </body>
 </html>
