--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
                </button>
-               <a class="navbar-brand" href="/">Rodrigo Aldana-López6</a>
+               <a class="navbar-brand" href="/">Rodrigo Aldana-López</a>
             </div>
             <div class="navbar-collapse collapse navbar-right">
                <ul class="nav navbar-nav">
