--- a/publications.html
+++ b/publications.html
@@ -82,6 +82,10 @@
                <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>EDCHO: High order exact dynamic consensus</b>”. <i>Automatica</i>, 2021.<br>[<a style="color:blue" href="publications/automatica2021.pdf">pdf</a> | <a style="color:blue" href="publications/automatica2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2202.03012">arxiv</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/abs/pii/S0005109821002703">publisher link</a>]
                </p>
                <br>
+                  <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>EDC: Exact Dynamic Consensus</b>”. <i>21st, IFAC World Congress</i>, 2020.<br>
+                     [<a style="color:blue" href="publications/ifac2020.pdf">pdf</a> | <a style="color:blue" href="publications/ifac2020.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896320313264">publisher link</a>]
+                  </p>
+                  <br>
                <p align="justify">Miguel Trujillo, <b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Michael Defoort, Javier Ruiz-León, Hector Becerra, “<b>Autonomous and non-autonomous fixed-time leader–follower consensus for second-order multi-agent systems</b>”. <i>Nonlinear Dynamics</i>, 2020.<br>
                   [<a style="color:blue" href="publications/nody2020.txt">bibtex</a> | <a style="color:blue" href="https://link.springer.com/article/10.1007/s11071-020-06075-7">publisher link</a>]
                </p>
@@ -93,6 +97,17 @@
                <p align="justify"><b>Rodrigo Aldana-López</b> David Gómez-Gutiérrez, Michael Defoort, Juan D. Sánchez-Torres, Aldo Jonathan Muñoz-Vázquez, “<b>A class of robust consensus algorithms with predefined-time convergence under switching topologies</b>”. <i>International Journal of Robust and Nonlinear Control</i>, 2019.<br>[<a style="color:blue" href="publications/ijrnc2019.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2019.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1812.07545">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rnc.4715">publisher link</a>]
                </p>
                <br>
+               <h3 class="big">Asynchronous perception in robot control</h3>
+               <hr>
+			   <br>
+                  <p align="justify">Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Event-Based Visual Tracking in Dynamic Environments</b>”. <i>ROBOT2022: Fifth Iberian Robotics Conference</i>, 2022.<br>
+                     [<a style="color:blue" href="publications/robot2022.pdf">pdf</a> | <a style="color:blue" href="publications/robot2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2212.07754">arxiv</a> | <a style="color:blue" href="https://link.springer.com/chapter/10.1007/978-3-031-21065-5_15">publisher link</a>]
+                  </p>
+                  <br>
+                  <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>Attention vs. precision: latency scheduling for uncertainty resilient control systems</b>”. <i>59th IEEE Conference on Decision and Control (CDC)</i>, 2020.<br>
+                     [<a style="color:blue" href="publications/cdc2020.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/9304104">publisher link</a>]
+                  </p>
+                  <br>
                <h3 class="big">Exact differentiation algorithms</h3>
                <hr>
                <br>
@@ -114,9 +129,16 @@
                <p align="justify">Juan D. Sánchez-Torres, Aldo Jonathan Muñoz-Vázquez, Michael Defoort, <b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, “<b>Predefined-time integral sliding mode control of second-order systems</b>”. <i>International Journal of Systems Science</i>, 2020.<br>[<a style="color:blue" href="publications/ijss2020.txt">bibtex</a> | <a style="color:blue" href="https://www.tandfonline.com/doi/abs/10.1080/00207721.2020.1815893#:~:text=Predefined%2Dtime%20integral%20sliding%20mode%20control%20of%20second%2Dorder%20systems,-Full%20Article&text=This%20manuscript%20introduces%20the%20design,class%20of%20second%2Dorder%20systems.&text=Then%2C%20the%20system%20dynamics%20evolve,during%20the%20integral%20sliding%20motion">publisher link</a>]
                </p>
                <br>
+                  <p align="justify">Esteban Jiménez-Rodríguez, <b>Rodrigo Aldana-López</b>, Juan D. Sánchez-Torres, David Gómez-Gutiérrez, Alexander G. Loukianov, “<b>Consistent Discretization of a Class of Predefined-Time Stable Systems</b>”. <i>21st, IFAC World Congress</i>, 2020.<br>
+                     [<a style="color:blue" href="publications/ifac2020b.pdf">pdf</a> | <a style="color:blue" href="publications/ifac2020b.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896320311307">publisher link</a>]
+                  </p>
+                  <br>
                <p align="justify"><b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Esteban Jiménez-Rodríguez, Juan D. Sánchez-Torres, Michael Defoort, “<b>Enhancing the settling time estimation of a class of fixed-time stable systems</b>”. <i>International Journal of Robust and Nonlinear Control</i>, 2019.<br>[<a style="color:blue" href="publications/ijrnc2019b.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2019b.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1809.07012">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/full/10.1002/rnc.4600">publisher link</a>]
                </p>
                <br>
+                  <p align="justify"> <b>Rodrigo Aldana-López</b>, Leobardo Campos-Macías, Julio Zamora, David Gómez-Gutiérrez, Adan Cruz, “<b>Dynamic Learning Rate for Neural Networks: A Fixed-Time Stability Approach</b>”. <i>24th International Conference on Pattern Recognition (ICPR)</i>, 2018.<br>
+                     [<a style="color:blue" href="publications/icpr2018.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/8546084">publisher link</a>]
+                  </p>
                <h3 class="big">Digital communications</h3>
                <hr>
                <br>
@@ -125,51 +147,17 @@
                <br>
                <p align="justify">J. Valencia-Velasco, O. Longoria-Gandara, <b>Rodrigo Aldana-López</b> and Luis Pizano-Escalante, “<b>Low-Complexity Maximum-Likelihood Detector for IoT BLE Devices</b>”. <i>IEEE Internet of Things Journal</i>, 2020.<br>[<a style="color:blue" href="publications/iot2020.txt">bibtex</a>| <a style="color:blue" href="https://ieeexplore.ieee.org/document/8962324">publisher link</a>]
                </p>
+                  <br>
+                  <p align="justify">Jose M. Valencia-Velasco, <b>Rodrigo Aldana-López</b>, Omar Longoria-Gandara, “<b>Alternative Viterbi Detection Metrics for GFSK Receivers: A Hardware Reduction Approach</b>”. <i>IEEE 10th Latin-American Conference on Communications</i>, 2018.<br>
+                     [<a style="color:blue" href="publications/latin2018.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/8613225">publisher link</a>]
+                  </p>
                <br>
                <p align="justify"><b>Rodrigo Aldana-López</b>, Jose M. Valencia-Velasco, Omar Longoria-Gandara, Luis Pizano-Escalante, “<b>Digital linear GFSK demodulator for IoT devices</b>”. <i>IET Communications</i>, 2018.<br>[<a style="color:blue" href="publications/iet2018.txt">bibtex</a> | <a style="color:blue" href="https://ietresearch.onlinelibrary.wiley.com/doi/epdf/10.1049/iet-com.2018.5040">publisher link</a>]
                </p>
                <br>
                </div>
             </div>
-         </div>
-         <br><br>
-         <h3>
-            <center>Conference papers</center>
-         </h3>
-         <br><br>
-         <div class="container">
-            <div class="row">
-               <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
-                  <div class="pub_list">
-                  <p align="justify">Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Event-Based Visual Tracking in Dynamic Environments</b>”. <i>ROBOT2022: Fifth Iberian Robotics Conference</i>, 2022.<br>
-                     [<a style="color:blue" href="publications/robot2022.pdf">pdf</a> | <a style="color:blue" href="publications/robot2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2212.07754">arxiv</a> | <a style="color:blue" href="https://link.springer.com/chapter/10.1007/978-3-031-21065-5_15">publisher link</a>]
-                  </p>
-                  <br>
-                  <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>Attention vs. precision: latency scheduling for uncertainty resilient control systems</b>”. <i>59th IEEE Conference on Decision and Control (CDC)</i>, 2020.<br>
-                     [<a style="color:blue" href="publications/cdc2020.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/9304104">publisher link</a>]
-                  </p>
-                  <br>
-                  <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>EDC: Exact Dynamic Consensus</b>”. <i>21st, IFAC World Congress</i>, 2020.<br>
-                     [<a style="color:blue" href="publications/ifac2020.pdf">pdf</a> | <a style="color:blue" href="publications/ifac2020.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896320313264">publisher link</a>]
-                  </p>
-                  <br>
-                  <p align="justify">Esteban Jiménez-Rodríguez, <b>Rodrigo Aldana-López</b>, Juan D. Sánchez-Torres, David Gómez-Gutiérrez, Alexander G. Loukianov, “<b>Consistent Discretization of a Class of Predefined-Time Stable Systems</b>”. <i>21st, IFAC World Congress</i>, 2020.<br>
-                     [<a style="color:blue" href="publications/ifac2020b.pdf">pdf</a> | <a style="color:blue" href="publications/ifac2020b.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896320311307">publisher link</a>]
-                  </p>
-                  <br>
-                  <p align="justify"> <b>Rodrigo Aldana-López</b>, Leobardo Campos-Macías, Julio Zamora, David Gómez-Gutiérrez, Adan Cruz, “<b>Dynamic Learning Rate for Neural Networks: A Fixed-Time Stability Approach</b>”. <i>24th International Conference on Pattern Recognition (ICPR)</i>, 2018.<br>
-                     [<a style="color:blue" href="publications/icpr2018.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/8546084">publisher link</a>]
-                  </p>
-                  <br>
-                  <p align="justify">Jose M. Valencia-Velasco, <b>Rodrigo Aldana-López</b>, Omar Longoria-Gandara, “<b>Alternative Viterbi Detection Metrics for GFSK Receivers: A Hardware Reduction Approach</b>”. <i>IEEE 10th Latin-American Conference on Communications</i>, 2018.<br>
-                     [<a style="color:blue" href="publications/latin2018.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/8613225">publisher link</a>]
-                  </p>
-                  <br>
-                  </div>
-               </div>
-            </div>
-            <br><br>
-         </div>
+         </div>         
       </div>
       </div>
       <br><br>
