--- a/publications.html
+++ b/publications.html
@@ -55,8 +55,8 @@
                   <h3 class="big">Autonomous navigation of UAVs</h3>
                   <hr>
                   <br>
-                  <p align="justify">Leobardo Campos-Macías, <b>Rodrigo Aldana-López</b>, Rafael de la Guardia, José I. Parra-Vilchis, David Gómez-Gutiérrez, “<b>Autonomous navigation of MAVs in unknown cluttered environments</b>”. <i>Journal of Field Robotics</i>, 2020.<br>
-                     [<a style="color:blue" href="publications/jfr2020.pdf">pdf</a> | <a style="color:blue" href="publications/jfr2020.txt">bibtex</a> | <a style="color:blue" href="https://www.youtube.com/watch?v=Wq0e7vF6nZM&feature=youtu.be">video</a> | <a style="color:blue" href="https://arxiv.org/abs/1906.08839">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21959">publisher link</a>]
+                  <p align="justify">Leobardo Campos-Macías, <b>Rodrigo Aldana-López</b>, Rafael de la Guardia, José I. Parra-Vilchis, David Gómez-Gutiérrez, “<b>Autonomous navigation of MAVs in unknown cluttered environments</b>”. <i>Journal of Field Robotics</i>, 2020. Top Cited Article 2021-2022.<br>
+                     [<a style="color:blue" href="publications/jfr2020.pdf">pdf</a> | <a style="color:blue" href="publications/jfr2020.txt">bibtex</a> | <a style="color:blue" href="https://www.youtube.com/watch?v=Wq0e7vF6nZM&feature=youtu.be">video</a> | <a style="color:blue" href="https://arxiv.org/abs/1906.08839">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21959">publisher link</a> | <a style="color:blue" href="publications/jfr2020Award.pdf">award</a>]
                   </p>
                   <br>
                   <p align="justify">Leobardo Campos-Macías, David Gómez-Gutiérrez, <b>Rodrigo Aldana-López</b>, Rafael de la Guardia, José I. Parra-Vilchis, “<b>A Hybrid Method for Online Trajectory Planning of Mobile Robots in Cluttered Environments</b>”. <i>IEEE Robotics and Automation Letters</i>, 2017.<br>
