--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -115,8 +115,8 @@
                   <hr>
                   <br>
                   <li>
-                     <p align="justify">Leobardo Campos-Macías, <b>Rodrigo Aldana-López</b>, Rafael de la Guardia, José I. Parra-Vilchis, David Gómez-Gutiérrez, “<b>Autonomous navigation of MAVs in unknown cluttered environments</b>”. <i>Journal of Field Robotics</i>, 2020.<br>
-                        [<a style="color:blue" href="publications/jfr2020.pdf">pdf</a> | <a style="color:blue" href="publications/jfr2020.txt">bibtex</a> | <a style="color:blue" href="https://www.youtube.com/watch?v=Wq0e7vF6nZM&feature=youtu.be">video</a> | <a style="color:blue" href="https://arxiv.org/abs/1906.08839">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21959">publisher link</a>]
+                     <p align="justify">Leobardo Campos-Macías, <b>Rodrigo Aldana-López</b>, Rafael de la Guardia, José I. Parra-Vilchis, David Gómez-Gutiérrez, “<b>Autonomous navigation of MAVs in unknown cluttered environments</b>”. <i>Journal of Field Robotics</i>, 2020. Top Cited Article 2021-2022.<br>
+                     [<a style="color:blue" href="publications/jfr2020.pdf">pdf</a> | <a style="color:blue" href="publications/jfr2020.txt">bibtex</a> | <a style="color:blue" href="https://www.youtube.com/watch?v=Wq0e7vF6nZM&feature=youtu.be">video</a> | <a style="color:blue" href="https://arxiv.org/abs/1906.08839">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21959">publisher link</a> | <a style="color:blue" href="publications/jfr2020Award.pdf">award</a>]
                      </p>
                   </li>
                   <br>
@@ -146,7 +146,7 @@
                   <hr>
                   <br>
                   <li>
-                     <p align="justify"><b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Esteban Jiménez-Rodríguez, Juan D. Sánchez-Torres, Michael Defoort, “<b>Enhancing the settling time estimation of a class of fixed-time stable systems</b>”. <i>International Journal of Robust and Nonlinear Control</i>, 2019.<br>[<a style="color:blue" href="publications/ijrnc2019b.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2019b.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1809.07012">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/full/10.1002/rnc.4600">publisher link</a>]
+                  <p align="justify"><b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Esteban Jiménez-Rodríguez, Juan D. Sánchez-Torres, Michael Defoort, “<b>Enhancing the settling time estimation of a class of fixed-time stable systems</b>”. <i>International Journal of Robust and Nonlinear Control</i>, 2019. Most downloaded during its first 12 months of publication. <br>[<a style="color:blue" href="publications/ijrnc2019b.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2019b.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1809.07012">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/full/10.1002/rnc.4600">publisher link</a> | <a style="color:blue" href="publications/ijrnc2019bAward.pdf">award</a>]
                      </p>
                   </li>
                   <br>
