--- a/publications.html
+++ b/publications.html
@@ -66,6 +66,9 @@
                   <h3 class="big">Multi-agent systems</h3>
                   <hr>
                   <br>
+                  <p align="justify"><b>Rodrigo Aldana-López</b>, Eduardo Sebastián, Rosario Aragüés, Eduardo Montijano, Carlos Sagüés, “<b>Distributed outer approximation of the intersection of ellipsoids</b>”. <i>IEEE Control Systems Letters</i>, 2023.<br> [<a style="color:blue" href="https://arxiv.org/pdf/2305.15172">pdf</a> | <a style="color:blue" href="publications/lcss2023.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2206.11608">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/10136818">publisher link</a>]
+                  </p>
+                  <br>
                   <p align="justify">Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Precise Dynamic Consensus under Event-Triggered Communication</b>”. <i>Machines, invited paper to the Special Issue on Advanced Motion Control of Multiple Robots</i>, 2023.<br> [<a style="color:blue" href="publications/machines2023.pdf">pdf</a> | <a style="color:blue" href="publications/machines2023.txt">bibtex</a> | <a style="color:blue" href="https://www.mdpi.com/2075-1702/11/2/128">publisher link</a>]
                   </p>
                   <br>
