--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -61,6 +61,12 @@
                   <hr>
                   <br>
                   <li>
+                  <p align="justify">Leobardo Campos-Macías, David Gómez-Gutiérrez, <b>Rodrigo Aldana-López</b>, Rafael de la Guardia, José I. Parra-Vilchis, “<b>A Hybrid Method for Online Trajectory Planning of Mobile Robots in Cluttered Environments</b>”. <i>IEEE Robotics and Automation Letters</i>, 2017.<br>
+                     [<a style="color:blue" href="publications/ral2017.pdf">pdf</a> | <a style="color:blue" href="publications/ral2017.txt">bibtex</a> | <a style="color:blue" href="https://www.youtube.com/watch?v=DJ1IZRL5t1Q&t=1s">video</a> | <a style="color:blue" href="https://arxiv.org/abs/1908.08493">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/7822897">publisher link</a>]
+                  </p>
+                  </li>
+                  <br>
+                  <li>
                      <p align="justify">David Gómez-Gutiérrez, <b>Rodrigo Aldana-López</b>, Richard Seeber, Marco Tulio Angulo, Leonid Fridman, “<b>An arbitrary-order exact differentiator with predefined convergence time bound for signals with exponential growth bound</b>”. <i>Automatica</i>, 2023.<br>[<a style="color:blue" href="publications/automatica2023.pdf">pdf</a> | <a style="color:blue" href="publications/automatica2023.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2106.00822">arxiv</a> | <a style="color:blue" href="https://doi.org/10.1016/j.automatica.2023.110995">publisher link</a>]
                   </p>
                   </li>
